<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="26dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_other_contribution_value"
            android:layout_width="match_parent"
            android:hint="@string/dialog_other_contribution"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_other_contribution_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/dialog_other_contribution_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/ok"
            android:textColor="@color/primary" />


    </LinearLayout>

</LinearLayout>


